--- a/physics_specific_macros.tex
+++ b/physics_specific_macros.tex
@@ -6,6 +6,9 @@
 %%%%%%%%%%%
 
 % Braket automatically add cdots if no arguments are specified. (See mathtools documentation.)
+% Consider separating into two files: One containing commands that have different counterparts in mathematical literature, and one containing braket notation.
+% Also consider a file containing physical constants. These would not conflict with conventions in mathematics and should therefore not be contained in this file.
+% Define \def as \equiv (for physics).
 
 
 %%%%%%%%%%%%%%%%%%%%
