--- a/general_mathematics_macros.tex
+++ b/general_mathematics_macros.tex
@@ -14,6 +14,7 @@
 % Automatic spacing around differentials (like that defined by physics package).
 % Consider generalising \Ltwo to general L^p spaces.
 % Identity and zero matrices. And consider the future of \identity!
+% Consider redefining intervals as paired delimiters.
 
 
 %%%%%%%%%%%
