--- a/mathematics_specific_macros.tex
+++ b/mathematics_specific_macros.tex
@@ -1,9 +1,10 @@
 %%%%%%%%%%%
-%% To do &&
+%% To do %%
 %%%%%%%%%%%
 
 % Proof environments (separate file?).
-% Define \def as := (for mathematics).
+
+% Expectation value command.
 
 
 %%%%%%%%%%%%%%%%%%%%
@@ -11,6 +12,7 @@
 %%%%%%%%%%%%%%%%%%%%
 
 \newcommand{\conj}[1]{\overline{#1}}			% Complex conjugation
+\newcommand{\defn}{:=}							% Definition
 
 
 %%%%%%%%%%%%%%%%%%%%
