--- a/physics_specific_macros.tex
+++ b/physics_specific_macros.tex
@@ -1,14 +1,8 @@
-\RequirePackage{mathtools}
-\RequirePackage{xifthen}
-
 %%%%%%%%%%%
-%% To do &&
+%% To do %%
 %%%%%%%%%%%
 
-% Braket automatically add cdots if no arguments are specified. (See mathtools documentation.)
-% Consider separating into two files: One containing commands that have different counterparts in mathematical literature, and one containing braket notation.
-% Also consider a file containing physical constants. These would not conflict with conventions in mathematics and should therefore not be contained in this file.
-% Define \def as \equiv (for physics).
+% Consider a file containing physical constants. These would not conflict with conventions in mathematics and should therefore not be contained in this file.
 
 
 %%%%%%%%%%%%%%%%%%%%
@@ -16,6 +10,7 @@
 %%%%%%%%%%%%%%%%%%%%
 
 \newcommand{\conj}[1]{#1^{*}}					% Complex conjugation
+\newcommand{\defn}{\equiv}						% Definition
 
 
 %%%%%%%%%%%%%%%%%%%%
@@ -23,33 +18,3 @@
 %%%%%%%%%%%%%%%%%%%%
 
 \newcommand{\adj}[1]{#1^{\dagger}}				% Adjoint of operator
-
-
-%%%%%%%%%%%%%%%%%%%%%%%
-%% Quantum mechanics %%
-%%%%%%%%%%%%%%%%%%%%%%%
-
-% Define bra and ket. Use starred versions for automatic resizing.
-\newcommand{\bra}[1]{\mathinner {\langle {#1}\rvert}}
-\WithSuffix\newcommand\bra*[1]{\mathinner {\left\langle {#1}\right|}}
-
-\newcommand{\ket}[1]{\mathinner {\lvert {#1}\rangle}}
-\WithSuffix\newcommand\ket*[1]{\mathinner {\left| {#1}\right\rangle}}
-
-% Define combined bra-ket. Takes two arguments.
-\DeclarePairedDelimiterX{\braket}[2]{\langle}{\rangle}{#1\,\delimsize\vert\,\mathopen{}#2}
-
-% Matrix elements; takes three arguments.
-\DeclarePairedDelimiterX{\matrixel}[3]{\langle}{\rangle}%
-{#1\,\delimsize\vert\,\mathopen{}#2\,\delimsize\vert\,\mathopen{}#3}
-
-% Commutator. Takes two arguments.
-\DeclarePairedDelimiterX{\comm}[2]{[}{]}{#1, #2}
-
-% Expectation value. If no optional argument is specified, it returns the ordinary expectation value '<Q>', but if the state 'x' is specified as an optional argument, it instead returns the matrix element '<x|Q|x>'.
-\DeclarePairedDelimiter{\expectationvalue}{\langle}{\rangle}
-\newcommand{\expval}[2][]{%
-	\ifthenelse{\isempty{#1}}%
-	{\expectationvalue{#2}}% if no optional argument
-	{\matrixel{#1}{#2}{#1}}% if optional argument
-}
