Changed defn to properly centered colon.

--- a/mathematics_specific_macros.tex
+++ b/mathematics_specific_macros.tex
@@ -12,7 +12,7 @@
 %%%%%%%%%%%%%%%%%%%%
 
 \newcommand{\conj}[1]{\overline{#1}}			% Complex conjugation
-\newcommand{\defn}{:=}							% Definition
+\newcommand{\defn}{\vcentcolon=}							% Definition
 
 
 %%%%%%%%%%%%%%%%%%%%
