Added reverse definition command. Also added to physics file for consistency.

--- a/mathematics_specific_macros.tex
+++ b/mathematics_specific_macros.tex
@@ -7,12 +7,22 @@
 % Expectation value command.
 
 
+%%%%%%%%%%%
+%% Notes %%
+%%%%%%%%%%%
+
+% \nfed is defined as it is to be "consistent" with e.g. \ni.
+
+
 %%%%%%%%%%%%%%%%%%%%
 %% General macros %%
 %%%%%%%%%%%%%%%%%%%%
 
 \newcommand{\conj}[1]{\overline{#1}}			% Complex conjugation
-\newcommand{\defn}{\vcentcolon=}							% Definition
+
+% Definition
+\newcommand{\defn}{\vcentcolon=}
+\newcommand{\nfed}{=\vcentcolon}
 
 
 %%%%%%%%%%%%%%%%%%%%
