--- a/physics_specific_macros.tex
+++ b/physics_specific_macros.tex
@@ -5,12 +5,22 @@
 % Consider a file containing physical constants. These would not conflict with conventions in mathematics and should therefore not be contained in this file.
 
 
+%%%%%%%%%%%
+%% Notes %%
+%%%%%%%%%%%
+
+% \nfed is currently identical to \defn, but it is defined to allow easy transition between physics and mathematics specific commands.
+
+
 %%%%%%%%%%%%%%%%%%%%
 %% General macros %%
 %%%%%%%%%%%%%%%%%%%%
 
 \newcommand{\conj}[1]{#1^{*}}					% Complex conjugation
-\newcommand{\defn}{\equiv}						% Definition
+
+% Definition
+\newcommand{\defn}{\equiv}
+\newcommand{\nfed}{\equiv}
 
 
 %%%%%%%%%%%%%%%%%%%%
