--- a/general_mathematics_macros.tex
+++ b/general_mathematics_macros.tex
@@ -8,7 +8,7 @@
 %% To do %%
 %%%%%%%%%%%
 
-% Better document structure!
+% Better document structure! Also a few words on how to use the commands in general.
 
 % Mixed partial derivatives. (Long term project!)
 
@@ -27,6 +27,10 @@
 % Consider separating \inner out into physics and mathematics specific files. Especially since the definition is now more complex. Or define the delimiter globally elsewhere.
 
 % Conditional probabilities.
+
+% Automatically check whether a vector is Latin or not. (Seems a bit complicated to do in general, may rely on xparse.)
+
+% Infinite sequence: Automatically detect the (maybe?) last letter of the input and start it from that letter = 1 by default. (Is this maybe too computationally expensive?)
 
 
 %%%%%%%%%%%
@@ -117,6 +121,15 @@
 	}
 }
 
+% Starred version
+\WithSuffix\newcommand\inner*[3][]{
+	\ifblank{#1}{%
+		\innerNoPostCode*{#2}{#3}
+	}{%
+		\innerPostCode*{#1}{#2}{#3}
+	}
+}
+
 %% Norm %%
 
 % No explicit vector space
@@ -137,6 +150,15 @@
 		\normNoPostCode{#2}
 	}{%
 		\normPostCode{#1}{#2}
+	}
+}
+
+% Starred version
+\WithSuffix\newcommand\norm*[2][]{
+	\ifblank{#1}{%
+		\normNoPostCode*{#2}
+	}{%
+		\normPostCode*{#1}{#2}
 	}
 }
 
@@ -225,5 +247,12 @@
 \newcommand{\std}[1][\hspace{0.7pt}]%
 	{\sigma_{#1}}								% Standard deviation
 \newcommand{\var}{\operatorname{Var}}			% Variance
+
+% Infinite sequence
+\DeclarePairedDelimiterXPP{\infiniteSequence}[2]{}{\{}{\}}{_{#2}^{\infty}}{#1}
+\newcommand{\seq}[2][n=1]{\infiniteSequence{#2}{#1}}
+\WithSuffix\newcommand\seq*[2][n=1]{\infiniteSequence*{#2}{#1}}
+
+
 
 
