--- a/mathematics_specific_macros.tex
+++ b/mathematics_specific_macros.tex
@@ -1,22 +1,25 @@
-%%%%%%%%%%%
-%% To do %%
-%%%%%%%%%%%
+% =====================================================
+% TO DO
+% =====================================================
 
 % Proof environments (separate file?).
 
 % Expectation value command.
 
 
-%%%%%%%%%%%
-%% Notes %%
-%%%%%%%%%%%
+
+% =====================================================
+% NOTES
+% =====================================================
 
 % \nfed is defined as it is to be "consistent" with e.g. \ni.
 
 
-%%%%%%%%%%%%%%%%%%%%
-%% General macros %%
-%%%%%%%%%%%%%%%%%%%%
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%% GENERAL MACROS %%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \newcommand{\conj}[1]{\overline{#1}}			% Complex conjugation
 
@@ -25,8 +28,10 @@
 \newcommand{\nfed}{=\vcentcolon}
 
 
-%%%%%%%%%%%%%%%%%%%%
-%% Linear algebra %%
-%%%%%%%%%%%%%%%%%%%%
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%% LINEAR ALGEBRA %%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \newcommand{\adj}[1]{#1^{*}}					% Adjoint of operator
