--- a/physics_specific_macros.tex
+++ b/physics_specific_macros.tex
@@ -1,30 +1,37 @@
-%%%%%%%%%%%
-%% To do %%
-%%%%%%%%%%%
+% =====================================================
+% TO DO
+% =====================================================
 
 % Consider a file containing physical constants. These would not conflict with conventions in mathematics and should therefore not be contained in this file.
 
 
-%%%%%%%%%%%
-%% Notes %%
-%%%%%%%%%%%
 
-% \nfed is currently identical to \defn, but it is defined to allow easy transition between physics and mathematics specific commands.
+% =====================================================
+% NOTES
+% =====================================================
+
+% \nfed is currently (and probably henceforth) identical to \defn, but it is defined to allow easy transition between physics and mathematics specific commands.
 
 
-%%%%%%%%%%%%%%%%%%%%
-%% General macros %%
-%%%%%%%%%%%%%%%%%%%%
 
-\newcommand{\conj}[1]{#1^{*}}					% Complex conjugation
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%% GENERAL MACROS %%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+% Complex conjugation
+\newcommand{\conj}[1]{#1^{*}}
 
 % Definition
 \newcommand{\defn}{\equiv}
 \newcommand{\nfed}{\equiv}
 
 
-%%%%%%%%%%%%%%%%%%%%
-%% Linear algebra %%
-%%%%%%%%%%%%%%%%%%%%
 
-\newcommand{\adj}[1]{#1^{\dagger}}				% Adjoint of operator
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%% LINEAR ALGEBRA %%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+% Adjoint of operator
+\newcommand{\adj}[1]{#1^{\dagger}}
